Made the htmls and Linked the pages

--- a/CustomerEng.html
+++ b/CustomerEng.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="stylesheet" href="CustomerEng.css">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -98,7 +99,7 @@
           <div class="col-6 col-md-4">
             <a href="home.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Home"
               />
@@ -107,53 +108,53 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="order.html" class="text-decoration-none text-dark">
+            <a href="loyaltydiscount.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Order"
               />
-              <h5 class="fw-bold">Order Now</h5>
+              <h5 class="fw-bold">Loyalty & Discount</h5>
             </a>
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="feedback.html" class="text-decoration-none text-dark">
+            <a href="orderTracking.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Feedback"
               />
-              <h5 class="fw-bold">Give Feedback</h5>
+              <h5 class="fw-bold">Order Tracking</h5>
             </a>
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="gallery.html" class="text-decoration-none text-dark">
+            <a href="vendorsRating.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Gallery"
               />
-              <h5 class="fw-bold">View Gallery</h5>
+              <h5 class="fw-bold">Vendors Rating & Reviews</h5>
             </a>
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="about.html" class="text-decoration-none text-dark">
+            <a href="likedItems.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="About"
               />
-              <h5 class="fw-bold">About Us</h5>
+              <h5 class="fw-bold">Liked Items</h5>
             </a>
           </div>
 
           <div class="col-6 col-md-4">
             <a href="contact.html" class="text-decoration-none text-dark">
               <img
-                src="https://via.placeholder.com/400x300"
+                src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Contact"
               />
