--- a/CustomerEng.html
+++ b/CustomerEng.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="CustomerEng.css">
+    <link rel="stylesheet" href="CustomerEng.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -16,6 +16,10 @@
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
   </head>
 
@@ -71,7 +75,9 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="#">Customer Engagement</a>
+                    <a class="dropdown-item" href="CustomerEng.html"
+                      >Customer Engagement</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Extra Option</a></li>
@@ -108,7 +114,10 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="loyaltydiscount.html" class="text-decoration-none text-dark">
+            <a
+              href="loyaltydiscount.html"
+              class="text-decoration-none text-dark"
+            >
               <img
                 src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
