--- a/orderTracking.html
+++ b/orderTracking.html
@@ -17,6 +17,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
 
   <body>
@@ -71,7 +75,9 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="#">Customer Engagement</a>
+                    <a class="dropdown-item" href="CustomerEng.html"
+                      >Customer Engagement</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Extra Option</a></li>
@@ -100,7 +106,7 @@
             <div class="col-md-3 mb-4">
               <div class="list-group shadow-sm">
                 <a
-                  href="customereng.html"
+                  href="CustomerEng.html"
                   class="list-group-item list-group-item-action bg-dark text-white fw-bold disabled"
                 >
                   Customer Portal
@@ -156,6 +162,7 @@
         </div>
       </navigation>
     </main>
+
     <div class="modal fade" id="statusModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
