--- a/vendorsRating.html
+++ b/vendorsRating.html
@@ -17,6 +17,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
 
   <body>
@@ -71,7 +75,9 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="#">Customer Engagement</a>
+                    <a class="dropdown-item" href="CustomerEng.html"
+                      >Customer Engagement</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Extra Option</a></li>
@@ -94,47 +100,162 @@
       </nav>
     </header>
     <main>
-      <navigation>
-        <div class="container mt-5">
-          <div class="row">
-            <div class="col-md-3 mb-4">
-              <div class="list-group shadow-sm">
-                <a
-                  href="customereng.html"
-                  class="list-group-item list-group-item-action bg-dark text-white fw-bold disabled"
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-3 mb-4">
+            <div class="list-group shadow-sm">
+              <a
+                href="CustomerEng.html"
+                class="list-group-item list-group-item-action bg-dark text-white fw-bold disabled"
+              >
+                Customer Portal
+              </a>
+              <a
+                href="loyaltydiscount.html"
+                class="list-group-item list-group-item-action"
+              >
+                <i class="bi bi-gift me-2"></i> Loyalty & Discount
+              </a>
+              <a
+                href="orderTracking.html"
+                class="list-group-item list-group-item-action"
+              >
+                <i class="bi bi-truck me-2"></i> Order Tracking
+              </a>
+              <a
+                href="vendorsRating.html"
+                class="list-group-item list-group-item-action"
+              >
+                <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
+              </a>
+              <a
+                href="likedItems.html"
+                class="list-group-item list-group-item-action"
+              >
+                <i class="bi bi-heart me-2"></i> Liked Items
+              </a>
+            </div>
+          </div>
+          <!--start main code for each page here-->
+          <content class="col-md-6">
+            <div class="text-center mb-4">
+              <h3 class="fw-bold">Search Vendor</h3>
+              <div class="input-group mb-3 shadow-sm">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter Your Vendor Name"
+                />
+                <button class="btn btn-secondary" type="button">
+                  <i class="bi bi-arrow-right"></i>
+                </button>
+              </div>
+
+              <div class="d-flex justify-content-center gap-2 mb-4">
+                <button class="btn btn-sm btn-outline-dark rounded-pill">
+                  All
+                </button>
+                <button class="btn btn-sm btn-outline-dark rounded-pill">
+                  Drinks
+                </button>
+                <button class="btn btn-sm btn-outline-dark rounded-pill">
+                  Western
+                </button>
+                <button class="btn btn-sm btn-outline-dark rounded-pill">
+                  Halal
+                </button>
+              </div>
+            </div>
+
+            <!-- Stall Review Card -->
+            <article class="row g-3" id="vendor-container"></article>
+          </content>
+          <!--end of col-6-->
+
+          <!--Review Card-->
+          <div class="col-md-3">
+            <div class="card bg-light border-0 shadow-sm">
+              <div class="card-body">
+                <h5 class="text-center fw-bold">Leave A Rating</h5>
+                <input
+                  type="text"
+                  class="form-control mb-2"
+                  id="reviewVendorName"
+                  placeholder="Vendor Name"
+                />
+
+                <div
+                  class="text-center text-warning fs-4 mb-2"
+                  id="star-container"
                 >
-                  Customer Portal
-                </a>
-                <a
-                  href="loyaltydiscount.html"
-                  class="list-group-item list-group-item-action"
+                  <i
+                    class="bi bi-star star-icon"
+                    onclick="setRating(1)"
+                    style="cursor: pointer"
+                  ></i>
+                  <i
+                    class="bi bi-star star-icon"
+                    onclick="setRating(2)"
+                    style="cursor: pointer"
+                  ></i>
+                  <i
+                    class="bi bi-star star-icon"
+                    onclick="setRating(3)"
+                    style="cursor: pointer"
+                  ></i>
+                  <i
+                    class="bi bi-star star-icon"
+                    onclick="setRating(4)"
+                    style="cursor: pointer"
+                  ></i>
+                  <i
+                    class="bi bi-star star-icon"
+                    onclick="setRating(5)"
+                    style="cursor: pointer"
+                  ></i>
+                </div>
+
+                <input type="hidden" id="ratingValue" value="0" />
+
+                <p class="text-center small mb-1">Give compliment</p>
+                <div class="d-flex flex-wrap gap-1 justify-content-center mb-3">
+                  <button
+                    class="btn btn-outline-primary btn-xs py-0 px-2"
+                    style="font-size: 10px"
+                  >
+                    Fast service
+                  </button>
+                  <button
+                    class="btn btn-outline-primary btn-xs py-0 px-2"
+                    style="font-size: 10px"
+                  >
+                    Clean stall
+                  </button>
+                  <button
+                    class="btn btn-outline-primary btn-xs py-0 px-2"
+                    style="font-size: 10px"
+                  >
+                    Well-behaved
+                  </button>
+                </div>
+
+                <textarea
+                  class="form-control mb-3"
+                  rows="4"
+                  placeholder="Comments"
+                ></textarea>
+                <button
+                  class="btn btn-secondary w-100 fw-bold"
+                  onclick="submitReview()"
                 >
-                  <i class="bi bi-gift me-2"></i> Loyalty & Discount
-                </a>
-                <a
-                  href="orderTracking.html"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="bi bi-truck me-2"></i> Order Tracking
-                </a>
-                <a
-                  href="vendorsRating.html"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
-                </a>
-                <a
-                  href="likedItems.html"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="bi bi-heart me-2"></i> Liked Items
-                </a>
+                  Submit Review
+                </button>
               </div>
             </div>
           </div>
+          <!--end of review form-->
         </div>
-      </navigation>
-      <!--start main code for each page here-->
+      </div>
     </main>
     <!-- place footer here -->
     <footer class="bg-dark text-white py-4 mt-5">
@@ -202,5 +323,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="vendors.js"></script>
+    <script src="vendorsRating.js"></script>
   </body>
 </html>
