--- a/CustomerEng.html
+++ b/CustomerEng.html
@@ -119,7 +119,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="cat.jpg"
+                src="imgs/loyalty.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Order"
               />
@@ -130,7 +130,7 @@
           <div class="col-6 col-md-4">
             <a href="orderTracking.html" class="text-decoration-none text-dark">
               <img
-                src="cat.jpg"
+                src="imgs/ordertracking.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Feedback"
               />
@@ -141,7 +141,7 @@
           <div class="col-6 col-md-4">
             <a href="vendorsRating.html" class="text-decoration-none text-dark">
               <img
-                src="cat.jpg"
+                src="imgs/ratings.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Gallery"
               />
@@ -152,7 +152,7 @@
           <div class="col-6 col-md-4">
             <a href="likedItems.html" class="text-decoration-none text-dark">
               <img
-                src="cat.jpg"
+                src="imgs/liked items.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="About"
               />
@@ -163,7 +163,7 @@
           <div class="col-6 col-md-4">
             <a href="contact.html" class="text-decoration-none text-dark">
               <img
-                src="cat.jpg"
+                src="imgs/contactsupport.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Contact"
               />
