--- a/Checkout.html
+++ b/Checkout.html
@@ -67,7 +67,7 @@
           </li>
           <li class="info-item">
             <span class="info-label">Payment:</span>
-            <span class="info-value">Cash at counter</span>
+            <span class="info-value">Credit Card</span>
           </li>
           <li class="info-item">
             <span class="info-label">Order Number:</span>
