--- a/add-food-item.html
+++ b/add-food-item.html
@@ -4,194 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Menu - Vendor Management</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #f5f5f5;
-    }
-
-    .sidebar {
-      width: 200px;
-      height: 100%;
-      background: linear-gradient(180deg, #69a2b0, #52ad9c);
-      padding: 20px 10px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      box-shadow: 2px 0 10px rgba(0,0,0,0.2);
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .sidebar ul li {
-      padding: 10px;
-      color: #FFFFFF;
-      border-radius: 6px;
-      border-bottom: 1px solid #8fc8bd;
-      cursor: pointer;
-      text-align: center;
-      margin-bottom: 15px;
-      transition: background 0.5s;
-    }
-
-    .sidebar ul li:hover {
-      background: rgba(255,255,255,0.25)
-    }
-
-    .content {
-      margin-left: 200px;
-      padding: 20px;
-    }
-
-    .top-bar {
-      text-align: right;
-      margin-bottom: 15px;
-    }
-
-    .top-bar button {
-      background-color: lightslategray;
-      color: white;
-      margin-left: 5px;
-      padding: 12px 12px;
-      border-radius: 5px;
-      border: none;
-      box-shadow: 1px 0px 5px lightgrey;
-
-    }
-
-    p {
-        width: 700px;
-      font-size: 40px;
-      margin: 20px auto;
-      text-align: left;
-    }
-
-    .form {
-      background-color: white;
-      padding: 20px;
-      border: 1px solid lightgrey;
-      box-shadow: 1px 0px 10px lightgrey;
-      border-radius: 8px;
-      width: 700px;
-      margin: auto;
-    }
-
-    .form-group {
-      margin-top: 15px;
-    }
-
-    .label {
-      font-weight: bold;
-      margin-bottom: 5px;
-      display: block;
-    }
-
-    .field {
-      padding: 10px;
-      border: 1px solid lightgrey;
-      border-radius: 5px;
-      background-color: #fafafa;
-      cursor: text;
-    }
-
-    .field:hover {
-      background-color: #f1f1f1;
-    }
-
-    .availability-options {
-      display: flex;
-      gap: 20px;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-
-    .availability button {
-      padding: 8px 15px;
-      border-radius: 5px;
-      border: 1px solid lightgrey;
-      cursor: pointer;
-      background-color: #fafafa;
-      transition: background 0.5s;
-    }
-
-    .availability button:hover {
-      background-color: #f1f1f1;
-    }
-
-    .dropdown button {
-      background-color: #fafafa;
-      border: 1px solid lightgrey;
-      padding: 10px 50px;
-      border-radius: 5px;
-      cursor: pointer;
-       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        font-weight: normal;
-    }
-
-    .dropdown option {
-        display: block;
-        padding: 10px;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    .dropdown:hover button {
-        background-color: #e0e0e0;
-    }
-
-    .dropdown option:hover {
-        background-color: #f1f1f1;
-    }
-
-    .form-buttons {
-      margin-top: 20px;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .form-buttons button {
-      padding: 12px 20px;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .discard {
-      background-color: #b6174b;
-    }
-
-    .discard:hover {
-      background-color: #9e133e;
-    }
-
-    .add-item {
-      background-color: #59a96a;
-    }
-
-    .add-item:hover {
-      background-color: #4a8c5a;
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="add-food-item.css">
 </head>
 <body>
 
@@ -253,6 +66,6 @@
       </div>
     </div>
   </div>
-
+  <script src="add-food-item.js"></script>
 </body>
 </html>
