--- a/current-rentalagreement.html
+++ b/current-rentalagreement.html
@@ -3,116 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vendor Management</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #f5f5f5;
-    }
-
-    .sidebar {
-      width: 180px;
-      height: 100%;
-      background: linear-gradient(180deg, #69a2b0, #52ad9c);
-      padding: 10px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      box-shadow: 1px 0 10px lightgray;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 20px;
-    }
-
-    .sidebar ul li {
-        margin-bottom: 15px;;
-    }
-
-    .sidebar ul li {
-        display: flex;
-        padding: 10px;
-        color: #FFFFFF;
-        border-bottom: 1px solid #0D6E5F;
-        text-decoration: none;
-        text-align: center;
-        margin-bottom: 15px;;
-    }
-
-    .content {
-      margin-left: 200px;
-      padding: 20px;
-    }
-
-    .top-bar {
-      text-align: right;
-      margin-bottom: 15px;
-    }
-
-    .top-bar button {
-        background-color: lightslategray;
-        color: white;
-      margin-left: 5px;
-      padding: 12px 12px;
-      border-radius: 5px;
-      border: none;
-      box-shadow: 1px 0px 5px lightgrey;
-
-    }
-
-
-
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        border: 1px solid lightgrey;
-        background-color: white;
-        box-shadow: 1px 0px 10px lightgrey;
-    }
-
-    thead {
-        background-color: #93a392;
-        color: white;
-    }
-
-    th {
-        padding: 10px;
-    }
-
-    tbody {
-        text-align: center;
-    }
-
-    td {
-        border-bottom: 1px solid lightgrey;
-        padding: 20px;
-    }
-
-    p {
-        font-size: 40px;
-        margin-bottom: 20px;
-        margin-top: 10px;
-    }
-
-
-    .status {
-        font-style: italic;
-    }
-
-    .expired {
-        color: rgb(145, 18, 18);
-    }
-
-    .active {
-        color: rgb(83, 131, 83);
-    }   
-
-
-    
-
-  </style>
+  <title>Rental Agreement - Current</title>
+  <link rel="stylesheet" href="current-rentalagreement.css">
 </head>
 <body>
 
@@ -212,5 +104,6 @@
       </tbody>
     </table>
   </div>
+  <script src="current-rentalagreement.js"></script>
 </body>
 </html>
