--- a/join-queue.html
+++ b/join-queue.html
@@ -4,141 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Queue Management</title>
-    <style>
-        body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin: 0;
-        background-color: #f5f5f5;
-        }
-        .image-container {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 50vw;    
-            height: 100vh; 
-        }
-        .image-container img {
-            width: 100%;
-            height: 100%;    
-            object-fit: cover;        
-            display: block;
-        }
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.4);
-
-        }
-        .overlay-text {
-            position: absolute;
-            padding: 20px;
-            font-size: 2em;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            color: white;
-            text-align: center;
-        }
-
-        .main {
-            display: flex;
-            height: 100vh;
-        }
-
-        .panel {
-            width: 50vw;
-            padding: 40px;
-            background: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .owner {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        }
-
-        .avatar {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background: #ddd;
-        margin-right: 15px;
-        overflow: hidden;
-        box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
-        }
-
-        .avatar img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            
-        }
-
-
-        .owner h2 {
-        margin: 0;
-        }
-
-        .owner small {
-        color: #555;
-        }
-
-        .queue-container {
-        background: #f9f9f9;
-        padding: 20px;
-        border-radius: 8px;
-        border: 1px solid #ddd;
-        margin-bottom: 30px;
-        font-size: 30px;
-        }
-
-        .queue-box p {
-        margin: 10px 0;
-        }
-
-        .note {
-        font-size: 12px;
-        color: #666;
-        font-style: italic;
-        }
-
-        .buttons {
-        display: flex;
-        }
-
-        .join {
-        background: black;
-        color: white;
-        padding: 14px 24px;
-        border: none;
-        border-radius: 6px;
-        font-size: 16px;
-        cursor: pointer;
-        margin-right: 10px;
-        }
-
-        .back {
-        background: #555;
-        color: white;
-        padding: 14px 24px;
-        border: none;
-        border-radius: 6px;
-        font-size: 16px;
-        cursor: pointer;
-        }
-
-        .highlight {
-            font-weight: bold;
-            font-style: italic;
-        }
-</style>
-
+  <link rel="stylesheet" href="join-queue.css">
 </head>
 <body>
     <div class="main">
@@ -174,4 +40,5 @@
             </div>
         </div>
     </div>
+    <script src="join-queue.js"></script>
 </body>
