--- a/renew-rentalagreement.html
+++ b/renew-rentalagreement.html
@@ -4,131 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Menu - Vendor Management</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #f5f5f5;
-    }
-
-    .sidebar {
-      width: 180px;
-      height: 100%;
-      background: linear-gradient(180deg, #69a2b0, #52ad9c);
-      padding: 10px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      box-shadow: 1px 0 10px lightgray;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 20px;
-    }
-
-    .sidebar ul li {
-      display: flex;
-      padding: 10px;
-      color: #FFFFFF;
-      border-bottom: 1px solid #0D6E5F;
-      text-align: center;
-      margin-bottom: 15px;
-    }
-
-    .content {
-      margin-left: 200px;
-      padding: 20px;
-    }
-
-    .top-bar {
-      text-align: right;
-      margin-bottom: 15px;
-    }
-
-    .top-bar button {
-      background-color: lightslategray;
-      color: white;
-      margin-left: 5px;
-      padding: 12px 12px;
-      border-radius: 5px;
-      border: none;
-      box-shadow: 1px 0px 5px lightgrey;
-
-    }
-
-    p {
-        width: 700px;
-      font-size: 40px;
-      margin: 20px auto;
-      text-align: left;
-    }
-
-    .form {
-      background-color: white;
-      padding: 20px;
-      border: 1px solid lightgrey;
-      box-shadow: 1px 0px 10px lightgrey;
-      border-radius: 8px;
-      width: 700px;
-      margin: auto;
-    }
-
-    .form-group {
-      margin-top: 15px;
-    }
-
-    .label {
-      font-weight: bold;
-      margin-bottom: 5px;
-      display: block;
-    }
-
-    .field {
-      padding: 10px;
-      border: 1px solid lightgrey;
-      border-radius: 5px;
-      background-color: #fafafa;
-      cursor: text;
-      margin-bottom: 10px;
-    }
-
-    .field:hover {
-      background-color: #f1f1f1;
-    }
-
-    .form-buttons {
-      margin-top: 20px;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .form-buttons button {
-      padding: 12px 20px;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .discard {
-      background-color: #b6174b;
-    }
-
-    .discard:hover {
-      background-color: #9e133e;
-    }
-
-    .renew {
-      background-color: #59a96a;
-    }
-
-    .renew:hover {
-      background-color: #4a8c5a;
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="renew-rentalagreement.css">
 </head>
 <body>
 
@@ -157,13 +33,13 @@
 
       <div class="form-group">
         <span class="label">New Rental Period</span>
-        <div class="field">Enter rental start date (--/--/----)...</div>
-        <div class="field">Enter rental end date (--/--/----)...</div>
+        <div class="field">Enter rental start date...</div>
+        <div class="field">Enter rental end date...</div>
       </div>
 
       <div class="form-group">
         <span class="label">New Monthly Rental Fee</span>
-        <div class="field" id="price">$1200</div>
+        <div class="field" id="price">Enter price...</div>
       </div>
 
       <div class="form-buttons">
@@ -172,6 +48,6 @@
       </div>
     </div>
   </div>
-
+  <script src="renew-rentalagreement.js"></script>
 </body>
 </html>
