fixed side nav bar

--- a/orderTracking.html
+++ b/orderTracking.html
@@ -105,9 +105,11 @@
           <div class="row">
             <div class="col-md-3 mb-4">
               <div class="list-group shadow-sm">
+                <!-- list group item applies display block to each <a>-->
+
                 <a
                   href="CustomerEng.html"
-                  class="list-group-item list-group-item-action bg-dark text-white fw-bold disabled"
+                  class="list-group-item list-group-item-action bg-dark text-white fw-bold"
                 >
                   Customer Portal
                 </a>
