--- a/CustomerEng.html
+++ b/CustomerEng.html
@@ -97,6 +97,7 @@
         <div class="row g-4 text-center">
           <div class="col-6 col-md-4">
             <a href="home.html" class="text-decoration-none text-dark">
+              <!--link to minglis login page-->
               <img
                 src="cat.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
