--- a/First Menu.html
+++ b/First Menu.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <div class="container main-container">
+  <div class="main-container">
     <header>
       <div class="back-btn-container"><a href="Stalls.html" class="back-btn">← Back</a></div>
       <h1>🥗 Rojak, Popiah & Cockle</h1>
@@ -56,7 +56,7 @@
     </main>
   </div>
 
-  <template id="food-item-template">
+  <section id="food-item-template">
     <article class="menu-item">
       <img src="" alt="">
       <button class="like">♥</button>
@@ -78,7 +78,7 @@
         </div>
       </div>
     </article>
-  </template>
+  </section>
 
   <footer class="bg-dark text-white py-4 mt-5">
     </footer>
