i changed so much

--- a/home-page-guest.html
+++ b/home-page-guest.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="CustomerEng.css" />
+    <link rel="stylesheet" href="home-page.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -82,11 +82,11 @@
 
             <div class="d-flex align-items-center">
               <a
-                href="#"
+                href="main-login.html"
                 class="btn btn-link text-white text-decoration-none me-3"
                 >Login</a
               >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="signup-account-type.html" class="btn btn-light fw-bold">Sign Up</a>
             </div>
           </div>
         </div>
