--- a/landing-page.html
+++ b/landing-page.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>HawkersGo</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
         <style>
             body {
-                background-color: lightblue;
+                background-color: #f5f5f5;
                 height: 100vh;
+                font-family: "DM Sans", sans-serif;
+            
             }
             div {
                 display: flex;
@@ -16,23 +17,31 @@
                 height: 100%;
                 justify-content: center;
             }
-            button {
+            a {
                 width: 300px;
-                background-color: #60935D;
+                background-color: #438f81;
                 color: white;
                 padding: 15px 20px;
-                border: none;
                 border-radius: 5px;
                 margin: 20px auto;
                 cursor: pointer;
                 box-shadow: 1px 2px 5px grey;
+                text-decoration: none;
+                text-align: center;
+                font-weight: bold;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+
             }
+            a:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 5px 15px lightgrey
+                }   
         </style>
     </head>
     <body>
         <div>
-            <button>User</button>
-            <button>NEA</button>
+            <a href="main-login.html">User</a>
+            <a href="nea-login.html">NEA</a>
         </div>
     </body>
 </html>
