i fix sum stuff

--- a/vendor-dashboard.html
+++ b/vendor-dashboard.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="checkout.html">Logout</a>
+            <a class="nav-link" href="main-login.html">Logout</a>
           </li>
         </ul>
       </div>
