--- a/nea-inspection.html
+++ b/nea-inspection.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Stalls.html">Logout</a>
+            <a class="nav-link" href="nea-login.html">Logout</a>
           </li>
         </ul>
       </div>
