edited nav bar linking

--- a/home-page-user.html
+++ b/home-page-user.html
@@ -81,7 +81,7 @@
         </ul>
 
         <div class="d-flex align-items-center">
-          <a href="#" class="text-decoration-none text-white">Log Out</a>
+          <a href="main-login.html" class="text-decoration-none text-white">Log Out</a>
         </div>
       </div>
     </div>
