made home page for users

--- a/home-page-guest.html
+++ b/home-page-guest.html
@@ -86,83 +86,96 @@
                 class="btn btn-link text-white text-decoration-none me-3"
                 >Login</a
               >
-              <a href="signup-account-type.html" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="signup-account-type.html" class="btn btn-light fw-bold"
+                >Sign Up</a
+              >
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div class="container mt-5">
-        <div class="row g-4 text-center">
-          <div class="col-6 col-md-4">
-            <a href="home.html" class="text-decoration-none text-dark">
-              <!--link to minglis login page-->
-              <img
-                src="cat.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Home"
-              />
-              <h5 class="fw-bold">Home Page</h5>
-            </a>
-          </div>
+      <div class="bg-light py-5 mb-5">
+        <div class="container text-center">
+          <h1 class="display-4 fw-bold mb-3">
+            Welcome to Singapore's Hawker Hub
+          </h1>
+          <p class="lead text-muted mx-auto" style="max-width: 600px">
+            Discover the best local food, order ahead to skip the queue, and
+            join our community of food lovers.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-6 col-md-4">
-            <a
-              href="loyaltydiscount.html"
-              class="text-decoration-none text-dark"
+      <div class="container mb-5">
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div
+              class="card h-100 border-0 shadow-sm hover-card text-center p-4"
             >
-              <img
-                src="imgs/loyalty.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Order"
-              />
-              <h5 class="fw-bold">Loyalty & Discount</h5>
-            </a>
+              <div class="card-body">
+                <div class="mb-3 text-primary">
+                  <i class="bi bi-shop-window" style="font-size: 3rem"></i>
+                </div>
+                <h3 class="card-title fw-bold">Hawker Centres</h3>
+                <p class="card-text text-muted">
+                  Explore island-wide hawker centres. Find hidden gems, check
+                  stall ratings, and see what's open near you.
+                </p>
+                <a
+                  href="hawkerCentres.html"
+                  class="btn btn-outline-primary mt-3 stretched-link"
+                >
+                  Find a Centre
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="col-6 col-md-4">
-            <a href="orderTracking.html" class="text-decoration-none text-dark">
-              <img
-                src="imgs/ordertracking.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Feedback"
-              />
-              <h5 class="fw-bold">Order Tracking</h5>
-            </a>
+          <div class="col-md-4">
+            <div
+              class="card h-100 border-0 shadow-sm hover-card text-center p-4"
+            >
+              <div class="card-body">
+                <div class="mb-3 text-success">
+                  <i class="bi bi-phone-flip" style="font-size: 3rem"></i>
+                </div>
+                <h3 class="card-title fw-bold">Start Ordering</h3>
+                <p class="card-text text-muted">
+                  Hungry? Skip the queue by ordering ahead. Mix and match from
+                  different stalls in one single order.
+                </p>
+                <a
+                  href="ordering.html"
+                  class="btn btn-outline-success mt-3 stretched-link"
+                >
+                  Order Now
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="col-6 col-md-4">
-            <a href="vendorsRating.html" class="text-decoration-none text-dark">
-              <img
-                src="imgs/ratings.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Gallery"
-              />
-              <h5 class="fw-bold">Vendors Rating & Reviews</h5>
-            </a>
-          </div>
-
-          <div class="col-6 col-md-4">
-            <a href="likedItems.html" class="text-decoration-none text-dark">
-              <img
-                src="imgs/liked items.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="About"
-              />
-              <h5 class="fw-bold">Liked Items</h5>
-            </a>
-          </div>
-
-          <div class="col-6 col-md-4">
-            <a href="contact.html" class="text-decoration-none text-dark">
-              <img
-                src="imgs/contactsupport.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Contact"
-              />
-              <h5 class="fw-bold">Contact Support</h5>
-            </a>
+          <div class="col-md-4">
+            <div
+              class="card h-100 border-0 shadow-sm hover-card text-center p-4"
+            >
+              <div class="card-body">
+                <div class="mb-3 text-warning">
+                  <i class="bi bi-people-fill" style="font-size: 3rem"></i>
+                </div>
+                <h3 class="card-title fw-bold">Community</h3>
+                <p class="card-text text-muted">
+                  Join our loyalty program, leave reviews, earn points for every
+                  meal, and redeem exclusive rewards.
+                </p>
+                <a
+                  href="customerEng.html"
+                  class="btn btn-outline-warning text-dark mt-3 stretched-link"
+                >
+                  Visit Portal
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
