--- a/customerEng.html
+++ b/customerEng.html
@@ -44,13 +44,15 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="userhome-page-guest.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Feedback</a>
+                <a class="nav-link" href="customerEng.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -68,14 +70,20 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="CustomerEng.html"
-                      >Customer Engagement</a
+                    <a class="dropdown-item" href="LoyaltyDiscount.html"
+                      >Loyalty & Discount</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">Extra Option</a></li>
+                  <li>
+                    <a class="dropdown-item" href="orderTracking.html"
+                      >Order Tracking</a
+                    >
+                  </li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">More option</a></li>
+                  <li>
+                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -96,7 +104,10 @@
       <div class="container mt-5">
         <div class="row g-4 text-center">
           <div class="col-6 col-md-4">
-            <a href="home.html" class="text-decoration-none text-dark">
+            <a
+              href="home-page-guest.html"
+              class="text-decoration-none text-dark"
+            >
               <!--link to minglis login page-->
               <img
                 src="cat.jpg"
