--- a/orderTracking.html
+++ b/orderTracking.html
@@ -44,13 +44,13 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Feedback</a>
+                <a class="nav-link" href="customerEng.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -68,14 +68,20 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="CustomerEng.html"
-                      >Customer Engagement</a
+                    <a class="dropdown-item" href="LoyaltyDiscount.html"
+                      >Loyalty & Discount</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">Extra Option</a></li>
+                  <li>
+                    <a class="dropdown-item" href="orderTracking.html"
+                      >Order Tracking</a
+                    >
+                  </li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">More option</a></li>
+                  <li>
+                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                  </li>
                 </ul>
               </li>
             </ul>
