--- a/customerEng.html
+++ b/customerEng.html
@@ -44,9 +44,7 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="userhome-page-guest.html"
-                  >Home</a
-                >
+                <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Order</a>
