--- a/LoyaltyDiscount.html
+++ b/LoyaltyDiscount.html
@@ -146,6 +146,7 @@
                     <img
                       src="imgs/hawker tier pass.png"
                       class="card-img-top"
+                      style="height: 20%"
                       alt="Tier"
                     />
                     <div class="card-body">
@@ -158,7 +159,7 @@
                   <h5 class="fw-bold">How It Works</h5>
                   <div class="card mb-4 shadow-sm">
                     <img
-                      src="https://via.placeholder.com/300x300?text=How+It+Works"
+                      src="imgs/how it works eng.png"
                       class="card-img-top"
                       alt="How It Works"
                     />
