fixed first menu and finished hawker centers.html page

--- a/hawker-centers.html
+++ b/hawker-centers.html
@@ -20,6 +20,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="checkout.html"></a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="checkout.html">Checkout</a>
           </li>
@@ -42,7 +45,7 @@
           <circle cx="11" cy="11" r="8"></circle>
           <path d="m21 21-4.35-4.35"></path>
         </svg>
-        <input type="text" name="search" placeholder="Type anything and press Enter to go to stalls...">
+        <input type="text" name="search" placeholder="Browse hawker centers and select one to view stalls">
       </div>
     </form>
 
