--- a/First Menu.html
+++ b/First Menu.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="Menu.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <div class="main-container">
+  <div class="container main-container">
     <header>
       <div class="back-btn-container"><a href="Stalls.html" class="back-btn">← Back</a></div>
       <h1>🥗 Rojak, Popiah & Cockle</h1>
@@ -56,7 +56,7 @@
     </main>
   </div>
 
-  <section id="food-item-template">
+  <template id="food-item-template">
     <article class="menu-item">
       <img src="" alt="">
       <button class="like">♥</button>
@@ -64,8 +64,7 @@
         <h3></h3>
         <p class="description"></p>
         
-        <div class="simple-addons">
-          </div>
+        <div class="simple-addons"></div>
         
         <div class="item-footer">
           <p class="price"></p>
@@ -78,10 +77,43 @@
         </div>
       </div>
     </article>
-  </section>
+  </template>
 
   <footer class="bg-dark text-white py-4 mt-5">
-    </footer>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+          <a href="#" class="text-white text-decoration-none fw-bold">HawkersGo</a>
+        </div>
+
+        <div class="col-md-8 text-center text-md-end">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item me-3">
+              <a href="#" class="text-white-50 text-decoration-none">Privacy Policy</a>
+            </li>
+            <li class="list-inline-item me-4">
+              <a href="#" class="text-white-50 text-decoration-none">Terms</a>
+            </li>
+
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"><i class="bi bi-facebook"></i> FB</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"><i class="bi bi-instagram"></i> IG</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"><i class="bi bi-twitter"></i> X</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <hr class="mt-4 border-secondary" />
+      <div class="text-center text-white-50 small">
+        &copy; 2024 HawkersGo. All rights reserved.
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="Menu.js"></script>
