cloned pages for guest

--- a/payment-success guest.html
+++ b/payment-success guest.html
@@ -38,8 +38,8 @@
             Estimated arrival: 25-30 mins</p>
         </div>
 
-        <a href="Orders.html" class="btn retry-btn success-btn">Track Order</a>
-        <a href="Home.html" class="btn home-btn">Return to Home</a>
+        <a href="orderTracking.html".html" class="btn retry-btn success-btn">Track Order</a>
+        <a href="home-page-guest.html" class="btn home-btn">Return to Home</a>
 
         <footer class="form-footer">
             <p>Need help? <a href="#" class="success-link">Contact Support</a></p>
