--- a/home-page-guest.html
+++ b/home-page-guest.html
@@ -88,11 +88,11 @@
 
             <div class="d-flex align-items-center">
               <a
-                href="#"
+                href="main-login.html"
                 class="btn btn-link text-white text-decoration-none me-3"
                 >Login</a
               >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="signup-account-type.html" class="btn btn-light fw-bold">Sign Up</a>
             </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
                   stall ratings, and see what's open near you.
                 </p>
                 <a
-                  href="hawkerCentres.html"
+                  href="hawker-centers.html"
                   class="btn btn-outline-primary mt-3 stretched-link"
                 >
                   Find a Centre
