--- a/home-page-user.html
+++ b/home-page-user.html
@@ -87,12 +87,7 @@
             </ul>
 
             <div class="d-flex align-items-center">
-              <a
-                href="#"
-                class="btn btn-link text-white text-decoration-none me-3"
-                >Login</a
-              >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
             </div>
           </div>
         </div>
@@ -127,7 +122,7 @@
                   stall ratings, and see what's open near you.
                 </p>
                 <a
-                  href="hawkerCentres.html"
+                  href="hawker-centers.html"
                   class="btn btn-outline-primary mt-3 stretched-link"
                 >
                   Find a Centre
