--- a/orderTracking-guest.html
+++ b/orderTracking-guest.html
@@ -67,11 +67,6 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="orderTracking.html"
@@ -107,31 +102,25 @@
                 <!-- list group item applies display block to each <a>-->
 
                 <a
-                  href="CustomerEng.html"
+                  href="home-page-guest.html"
                   class="list-group-item list-group-item-action bg-dark text-white fw-bold"
                 >
                   Customer Portal
                 </a>
                 <a
-                  href="loyaltydiscount.html"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="bi bi-gift me-2"></i> Loyalty & Discount
-                </a>
-                <a
-                  href="orderTracking.html"
+                  href="orderTracking-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-truck me-2"></i> Order Tracking
                 </a>
                 <a
-                  href="vendorsRating.html"
+                  href="vendorsRating-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
                 </a>
                 <a
-                  href="likedItems.html"
+                  href="likedItems-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-heart me-2"></i> Liked Items
