--- a/vendorsRating-user.html
+++ b/vendorsRating-user.html
@@ -87,12 +87,7 @@
             </ul>
 
             <div class="d-flex align-items-center">
-              <a
-                href="#"
-                class="btn btn-link text-white text-decoration-none me-3"
-                >Login</a
-              >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
             </div>
           </div>
         </div>
@@ -106,7 +101,7 @@
               <!-- list group item applies display block to each <a>-->
 
               <a
-                href="CustomerEng.html"
+                href="home-page-user.html"
                 class="list-group-item list-group-item-action bg-dark text-white fw-bold"
               >
                 Customer Portal
@@ -118,19 +113,19 @@
                 <i class="bi bi-gift me-2"></i> Loyalty & Discount
               </a>
               <a
-                href="orderTracking.html"
+                href="orderTracking-user.html"
                 class="list-group-item list-group-item-action"
               >
                 <i class="bi bi-truck me-2"></i> Order Tracking
               </a>
               <a
-                href="vendorsRating.html"
+                href="vendorsRating-user.html"
                 class="list-group-item list-group-item-action"
               >
                 <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
               </a>
               <a
-                href="likedItems.html"
+                href="likedItems-user.html"
                 class="list-group-item list-group-item-action"
               >
                 <i class="bi bi-heart me-2"></i> Liked Items
