edited features for guest and users seperately

--- a/customerEng-guest.html
+++ b/customerEng-guest.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="#">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,11 +67,7 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
+               
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="orderTracking.html"
@@ -118,22 +114,10 @@
             </a>
           </div>
 
-          <div class="col-6 col-md-4">
-            <a
-              href="loyaltydiscount.html"
-              class="text-decoration-none text-dark"
-            >
-              <img
-                src="imgs/loyalty.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Order"
-              />
-              <h5 class="fw-bold">Loyalty & Discount</h5>
-            </a>
-          </div>
+          
 
           <div class="col-6 col-md-4">
-            <a href="orderTracking.html" class="text-decoration-none text-dark">
+            <a href="orderTracking-guest.html" class="text-decoration-none text-dark">
               <img
                 src="imgs/ordertracking.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -144,7 +128,7 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="vendorsRating.html" class="text-decoration-none text-dark">
+            <a href="vendorsRating-guest.html" class="text-decoration-none text-dark">
               <img
                 src="imgs/ratings.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -155,7 +139,7 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="likedItems.html" class="text-decoration-none text-dark">
+            <a href="likedItems-guest.html" class="text-decoration-none text-dark">
               <img
                 src="imgs/liked items.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -165,16 +149,6 @@
             </a>
           </div>
 
-          <div class="col-6 col-md-4">
-            <a href="contact.html" class="text-decoration-none text-dark">
-              <img
-                src="imgs/contactsupport.jpg"
-                class="img-fluid rounded shadow-sm mb-2"
-                alt="Contact"
-              />
-              <h5 class="fw-bold">Contact Support</h5>
-            </a>
-          </div>
         </div>
       </div>
     </main>
