--- a/likedItems-guest.html
+++ b/likedItems-guest.html
@@ -107,10 +107,10 @@
                 <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -127,20 +127,16 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
+
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-guest.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems.html"
+                    <a class="dropdown-item" href="likedItems-guest.html"
                       >Liked Items</a
                     >
                   </li>
@@ -169,31 +165,26 @@
                 <!-- list group item applies display block to each <a>-->
 
                 <a
-                  href="customereng.html"
+                  href="customerEng-guest.html"
                   class="list-group-item list-group-item-action bg-dark text-white fw-bold"
                 >
                   Customer Portal
                 </a>
+
                 <a
-                  href="loyaltydiscount.html"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="bi bi-gift me-2"></i> Loyalty & Discount
-                </a>
-                <a
-                  href="orderTracking.html"
+                  href="orderTracking-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-truck me-2"></i> Order Tracking
                 </a>
                 <a
-                  href="vendorsRating.html"
+                  href="vendorsRating-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
                 </a>
                 <a
-                  href="likedItems.html"
+                  href="likedItems-guest.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-heart me-2"></i> Liked Items
