--- a/likedItems-user.html
+++ b/likedItems-user.html
@@ -107,10 +107,10 @@
                 <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -134,25 +134,21 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-user.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems-user.html">Liked Items</a>
                   </li>
                 </ul>
               </li>
             </ul>
 
             <div class="d-flex align-items-center">
-              <a
-                href="#"
-                class="btn btn-link text-white text-decoration-none me-3"
-                >Login</a
-              >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+
+              <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
             </div>
           </div>
         </div>
@@ -167,31 +163,31 @@
                 <!-- list group item applies display block to each <a>-->
 
                 <a
-                  href="customereng.html"
+                  href="customerEng-user.html"
                   class="list-group-item list-group-item-action bg-dark text-white fw-bold"
                 >
                   Customer Portal
                 </a>
                 <a
-                  href="loyaltydiscount.html"
+                  href="LoyaltyDiscount.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-gift me-2"></i> Loyalty & Discount
                 </a>
                 <a
-                  href="orderTracking.html"
+                  href="orderTracking-user.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-truck me-2"></i> Order Tracking
                 </a>
                 <a
-                  href="vendorsRating.html"
+                  href="vendorsRating-user.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-star me-2"></i> Vendor Ratings & Reviews
                 </a>
                 <a
-                  href="likedItems.html"
+                  href="likedItems-user.html"
                   class="list-group-item list-group-item-action"
                 >
                   <i class="bi bi-heart me-2"></i> Liked Items
