--- a/orderTracking-user.html
+++ b/orderTracking-user.html
@@ -47,10 +47,10 @@
                 <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
