--- a/vendorsRating-guest.html
+++ b/vendorsRating-guest.html
@@ -47,10 +47,10 @@
                 <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Stalls.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,20 +67,16 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
+
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-guest.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems.html"
+                    <a class="dropdown-item" href="likedItems-guest.html"
                       >Liked Items</a
                     >
                   </li>
@@ -113,12 +109,7 @@
               >
                 Customer Portal
               </a>
-              <a
-                href="loyaltydiscount.html"
-                class="list-group-item list-group-item-action"
-              >
-                <i class="bi bi-gift me-2"></i> Loyalty & Discount
-              </a>
+
               <a
                 href="orderTracking-guest.html"
                 class="list-group-item list-group-item-action"
