--- a/vendorsRating-user.html
+++ b/vendorsRating-user.html
@@ -44,13 +44,13 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="home-page-guest.html">Home</a>
+                <a class="nav-link active" href="home-page-user.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Stalls.html">Customer Portal</a>
+                <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -74,13 +74,13 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-user.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems-user.html">Liked Items</a>
                   </li>
                 </ul>
               </li>
@@ -107,7 +107,7 @@
                 Customer Portal
               </a>
               <a
-                href="loyaltydiscount.html"
+                href="LoyaltyDiscount.html"
                 class="list-group-item list-group-item-action"
               >
                 <i class="bi bi-gift me-2"></i> Loyalty & Discount
