completely edited my files, added navbar and footer and fixed linkage

--- a/add-food-item.html
+++ b/add-food-item.html
@@ -20,10 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Stalls.html">Stalls</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="checkout.html">Checkout</a>
+            <a class="nav-link" href="main-login.html">Logout</a>
           </li>
         </ul>
       </div>
@@ -34,15 +31,11 @@
       <li>My Store</li>
       <li>Menu</li>
       <li>Orders</li>
-      <li>Reset Password</li>
       <li>Rental Agreement</li>
     </ul>
   </div>
 
   <div class="content">
-    <div class="top-bar">
-      <button>Menu List</button>
-    </div>
     <p>Add Menu</p>
     <div class="form">
       <div class="form-group">
