--- a/completed-orders.html
+++ b/completed-orders.html
@@ -20,10 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Stalls.html">Stalls</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="checkout.html">Checkout</a>
+            <a class="nav-link" href="main-login.html">Logout</a>
           </li>
         </ul>
       </div>
@@ -35,7 +32,6 @@
       <li>My Store</li>
       <li>Menu</li>
       <li>Orders</li>
-      <li>Reset Password</li>
       <li>Rental Agreement</li>
     </ul>
   </div>
@@ -208,6 +204,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="completed-orders.js"></script>
 </body>
 </html>
